--- a/Sertivikat.html
+++ b/Sertivikat.html
@@ -208,20 +208,20 @@
                                         </div>
                                     </div>
                                     <div class="rtable-cell traffic-cell">
-                                        <div class="rtable-cell--heading">Traffic</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content date-content"></div>
                                     </div>
                                     <div class="rtable-cell source-cell">
-                                        <div class="rtable-cell--heading">Source</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content access-link-content d-flex align-items-center">
                                             </div>
                                     </div>
                                     <div class="rtable-cell referrals-cell">
-                                        <div class="rtable-cell--heading">Referrals</div>
+                                        <div class="rtable-cell--heading">Nilai</div>
                                         <div class="rtable-cell--content replay-link-content">80</div>
                                     </div>
                                     <div class="rtable-cell trend-cell">
-                                        <div class="rtable-cell--heading">Trend</div>
+                                        <div class="rtable-cell--heading">Cetak</div>
                                         <div class="rtable-cell--content replay-link-content">
                                             <style>
                                                 .print-button {
@@ -249,20 +249,20 @@
                                         </div>
                                     </div>
                                     <div class="rtable-cell traffic-cell">
-                                        <div class="rtable-cell--heading">Lintas</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content date-content"></div>
                                     </div>
                                     <div class="rtable-cell source-cell">
-                                        <div class="rtable-cell--heading">Source</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content access-link-content d-flex align-items-center">
                                             </div>
                                     </div>
                                     <div class="rtable-cell referrals-cell">
-                                        <div class="rtable-cell--heading">Referrals</div>
+                                        <div class="rtable-cell--heading">Nilai</div>
                                         <div class="rtable-cell--content replay-link-content">85</div>
                                     </div>
                                     <div class="rtable-cell trend-cell">
-                                        <div class="rtable-cell--heading">Trend</div>
+                                        <div class="rtable-cell--heading">Cetak</div>
                                         <div class="rtable-cell--content replay-link-content">
                                             <style>
                                                 .print-button {
@@ -289,20 +289,20 @@
                                         </div>
                                     </div>
                                     <div class="rtable-cell traffic-cell">
-                                        <div class="rtable-cell--heading">Traffic</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content date-content"></div>
                                     </div>
                                     <div class="rtable-cell source-cell">
-                                        <div class="rtable-cell--heading">Source</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content access-link-content d-flex align-items-center">
                                             </div>
                                     </div>
                                     <div class="rtable-cell referrals-cell">
-                                        <div class="rtable-cell--heading">Referrals</div>
+                                        <div class="rtable-cell--heading">Nilai</div>
                                         <div class="rtable-cell--content replay-link-content">75</div>
                                     </div>
                                     <div class="rtable-cell trend-cell">
-                                        <div class="rtable-cell--heading">Trend</div>
+                                        <div class="rtable-cell--heading">Cetak</div>
                                         <div class="rtable-cell--content replay-link-content">
                                             <style>
                                                 .print-button {
@@ -329,20 +329,20 @@
                                         </div>
                                     </div>
                                     <div class="rtable-cell traffic-cell">
-                                        <div class="rtable-cell--heading">Traffic</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content date-content"></div>
                                     </div>
                                     <div class="rtable-cell source-cell">
-                                        <div class="rtable-cell--heading">Source</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content access-link-content d-flex align-items-center">
                                             </div>
                                     </div>
                                     <div class="rtable-cell referrals-cell">
-                                        <div class="rtable-cell--heading">Referrals</div>
+                                        <div class="rtable-cell--heading">Nilai</div>
                                         <div class="rtable-cell--content replay-link-content">90</div>
                                     </div>
                                     <div class="rtable-cell trend-cell">
-                                        <div class="rtable-cell--heading">Trend</div>
+                                        <div class="rtable-cell--heading">Cetak</div>
                                         <div class="rtable-cell--content replay-link-content">
                                             <style>
                                                 .print-button {
@@ -369,20 +369,20 @@
                                         </div>
                                     </div>
                                     <div class="rtable-cell traffic-cell">
-                                        <div class="rtable-cell--heading">Traffic</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content date-content"></div>
                                     </div>
                                     <div class="rtable-cell source-cell">
-                                        <div class="rtable-cell--heading">Source</div>
+                                        <div class="rtable-cell--heading"></div>
                                         <div class="rtable-cell--content access-link-content d-flex align-items-center">
                                             </div>
                                     </div>
                                     <div class="rtable-cell referrals-cell">
-                                        <div class="rtable-cell--heading">Referrals</div>
+                                        <div class="rtable-cell--heading">Nilai</div>
                                         <div class="rtable-cell--content replay-link-content">89</div>
                                     </div>
                                     <div class="rtable-cell trend-cell">
-                                        <div class="rtable-cell--heading">Trend</div>
+                                        <div class="rtable-cell--heading">Cetak</div>
                                         <div class="rtable-cell--content replay-link-content">
                                             <style>
                                                 .print-button {
