--- a/login.html
+++ b/login.html
@@ -212,7 +212,7 @@
                                                 </div>
                                             </div>
                                             <div class="sing-buttom mb-20" >
-                                                <button type="submit" class="sing-btn "style="color: white;"><a  href="dasboard.html">Masuk</a></button>
+                                                <button type="submit"><a  href="dasboard.html">Masuk</a></button>
                                                 
                                             </div>
                                             <div class="registered wrapper">
